<?xml version="1.0"?>
<package format="2">
  <name>global_inverse_kinematics_solver</name>
  <version>0.0.0</version>
  <description>The global_inverse_kinematics_solver package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>choreonoid</depend>
  <depend>ik_constraint2</depend>
  <depend>prioritized_inverse_kinematics_solver2</depend>
  <depend>ompl</depend>
  <depend>ompl_near_projection</depend>
</package>
